lab-kube-nginx/templates/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy 
  labels:
   app: nginx-app
spec:
  replicas: 3
  selector:
   matchLabels:
    app: nginx-app
  template:
   metadata:
    name: nginx-pod
    labels:
     app: nginx-app
   spec:
     containers:
       - name: nginx
         image: nginx
         ports:
           - containerPort: 80
