lab-kube-nginx/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
   name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
