lab-kube-nginx/templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
spec:
 type: LoadBalancer
selector:
 app: nginx
 version: "1.0"
ports:
  - port: 8081
    targetPort: 80
